IE scrollbar fix

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -4,6 +4,9 @@
 html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 
+* {
+  -ms-overflow-style: none;
+}
 html {
   height: 100%;
   font-size: 62.5%;
